manifests/infra/templates/nginx.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-edge-proxy
  namespace: envoy-gateway-system
spec:
  selector:
    matchLabels:
      app: nginx-edge-proxy
  template:
    metadata:
      labels:
        app: nginx-edge-proxy
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-edge-config
